[package]
name = "slings"
version = "0.2.11"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/slings"
homepage = "https://github.com/cssivision/slings"
description = "A small async runtime based on io-uring for Rust"
edition = "2018"

[dependencies]
io-uring = { version = "0.5", features = ["unstable"] }
async-task = "4.0"
scoped-tls = "1.0"
slab = "0.4"
libc = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
pin-project-lite = "0.2"
