[package]
name = "slings"
version = "0.3.14"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/slings"
homepage = "https://github.com/cssivision/slings"
description = "A small async runtime based on io-uring for Rust"
edition = "2018"

[dependencies]
io-uring = { version = "0.5", features = ["unstable"] }
async-task = "4.0"
scoped-tls = "1.0"
slab = "0.4"
libc = "0.2"
futures-io = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"
socket2 = { version = "0.4", features = ["all"] }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["io"] }
